--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,32 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
 [project]
 name = "ipd"
 version = "0.1"
 dependencies = [
+    'assertpy',
+    'eliot',
+    'eliot-tree',
+    'fastapi[standard]',
+    'gitpython',
     'hydra-core',
     'hypothesis',
     'icecream',
-    'requests',
-    'pydantic',
     'numpy',
-    'typer[all]',
-    'gitpython',
-    'python-box',
-    'ruff',
-    'assertpy',
     'opt_einsum',
-    'eliot',
-    'eliot-tree',
-]
+    'pydantic',
+    'pytest',
+    'pytest-sugar',
+    'python-box',
+    'requests',
+    'ruff',
+    'sqlmodel[standard]',
+    'typer[all]',]
 
 [project.scripts]
-ipd = 'ipd.tools.__main__:main'
+ipd = 'ipd.__main__:main'
 
 [tool.pytest.ini_options]
 minversion = "6.0"
