--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -12,13 +12,20 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
 
+    - name: setup
+      run: |
+        source /home/bench/.bashrc
+        ipd ci repo update_library
+        ipd ci repo setup_submodules
+
     - name: run ruff
       run: |
-        /home/bench/.local/bin/ruff check 2>&1 | tee ruff.log
+        ruff check 2>&1 | tee ruff.log
 
     - name: run pytest digs
       run: |
-        srun -p gpu --gres=gpu:a4000:1 --cpus-per-task=4 --mem=32G apptainer exec /home/sheffler/project/apptainer/TEST pytest 2>&1 | tee pytest.log
+        echo $(which python)
+        pytest 2>&1 | tee pytest.log
 
     - name: check test results
       run: |
