--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -14,6 +14,7 @@ jobs:
 
     - name: setup
       run: |
+        source /home/bench/.bashrc
         conda activate ci
         ipd ci repo update_library
         ipd ci repo setup_submodules
