--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: setup
       run: |
-        ipd ci repo update_library
+        ipd ci update_library
         ipd ci repo setup_submodules
 
     - name: run ruff
