sieve fix and additions to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ name = "ipd"
 version = "0.1"
 dependencies = [
     'assertpy',
+    'colorlog',
+    'debugpy',
     'eliot',
     'eliot-tree',
     'fastapi[standard]',
@@ -14,17 +16,26 @@ dependencies = [
     'hydra-core',
     'hypothesis',
     'icecream',
+    'ipython',
+    'ipykernel',
+    'ipywidgets',
+    'ipdb',
     'numpy',
     'opt_einsum',
     'pre-commit',
     'pandas',
+    'plotly',
     'pydantic',
     'pytest',
     'pytest-sugar',
     'pytest-xdist',
+    'pytest-cov',
+    'pytest-benchmark',
+    'pytest-dotenv',
     'python-box',
     'requests',
     'ruff',
+    'seaborn',
     'sqlmodel[standard]',
     'submitit',
     'tqdm',
