numpy 2 fix, minor dependency updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     'ipykernel',
     'ipywidgets',
     'ipdb',
+    'numba',
     'numpy',
     'opt_einsum',
     'pre-commit',
