mostly updates to crud stuff, WIP mlb spec tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,25 +12,28 @@ dependencies = [
     'fastapi[standard]',
     'gitpython',
     'hydra-core',
-    'hypothesis[all]',
+    'hypothesis[numpy]',
     'icecream',
     'more_itertools',
+    'networkx[default]',
     'numpy',
     'opt_einsum',
     'pre-commit',
     'pandas',
-    'psychopg2',
+    'pendulum',
+    'psycopg2',
     'pydantic',
+    'pdot',
     'pytest',
     'pytest-sugar',
     'pytest-xdist',
     'python-box',
     'requests',
     'ruff',
-    'sqlmodel[standard]',
+    'sqlmodel',
     'submitit',
     'tqdm',
-    'typer[all]',
+    'typer',
     'uvicorn[standard]',
 ]
 
