MLB crud updates (#10)
* updates to crud stuff

* update crud stuff, rename subprocess, improve import time

* mostly updates to crud stuff, WIP mlb spec tests

* mostly updates to crud stuff, WIP mlb spec tests

* merge main, add hypothesis_strats util

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,23 +12,30 @@ dependencies = [
     'fastapi[standard]',
     'gitpython',
     'hydra-core',
-    'hypothesis',
+    'hypothesis[numpy]',
     'icecream',
+    'more_itertools',
+    'networkx[default]',
+    'numba',
     'numpy',
     'opt_einsum',
     'pre-commit',
     'pandas',
+    'pendulum',
+    'psycopg2',
     'pydantic',
+    'pdot',
     'pytest',
     'pytest-sugar',
     'pytest-xdist',
     'python-box',
     'requests',
     'ruff',
-    'sqlmodel[standard]',
+    'sqlmodel',
     'submitit',
     'tqdm',
-    'typer[all]',
+    'typer',
+    'uvicorn[standard]',
     'yapf',
 ]
 
