fix deps and add pip install test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,28 +7,28 @@ name = "ipd"
 version = "0.1"
 dependencies = [
     'assertpy',
-    'eliot',
-    'eliot-tree',
+    # 'eliot',
+    # 'eliot-tree',
     'fastapi[standard]',
     'gitpython',
     'hydra-core',
     'hypothesis[numpy]',
     'icecream',
     'more_itertools',
-    'networkx[default]',
+    'networkx',
     'numba',
     'numpy',
     'opt_einsum',
-    'pre-commit',
+    # 'pre-commit',
     'pandas',
     'pendulum',
-    'psycopg2',
+    # 'psycopg2',
     'pydantic',
     'pdot',
     'pytest',
     'pytest-sugar',
     'pytest-xdist',
-    'python-box',
+    # 'python-box',
     'requests',
     'ruff',
     'sqlmodel',
