--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "ipd"
 version = "0.1"
 dependencies = [
     'assertpy',
+    'compact-json',
     # 'eliot',
     # 'eliot-tree',
     'fastapi[standard]',
