--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     'debugpy',
     # 'eliot',
     # 'eliot-tree',
-    'fastapi[standard]',
     'gitpython',
     'hydra-core',
     'hypothesis[numpy]',
@@ -21,7 +20,6 @@ dependencies = [
     'ipywidgets',
     'ipdb',
     'more_itertools',
-    'networkx',
     'numba',
     'numpy',
     'opt_einsum',
@@ -29,7 +27,6 @@ dependencies = [
     'pandas',
     'plotly',
     'pendulum',
-    # 'psycopg2',
     'pydantic',
     'pdot',
     'pytest',
@@ -42,13 +39,18 @@ dependencies = [
     'requests',
     'ruff',
     'seaborn',
-    'sqlmodel',
-    'sqlmodel',
     'submitit',
     'tqdm',
     'typer',
-    'uvicorn[standard]',
     'yapf',
+]
+[project.optional-dependencies]
+ppp = [
+    'fastapi[standard]',
+    'psycopg2',
+    'sqlmodel',
+    'uvicorn[standard]',
+
 ]
 
 [project.scripts]
