--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,9 +56,13 @@ ipd = 'ipd.__main__:main'
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q"
+addopts = "-m 'not ci'"
 testpaths = [
     "ipd/tests",
+]
+markers = [
+    "slow: marks tests as slow to run",
+    "fast: tests that run in a second or two",
 ]
 
 [tool.pyright]
