code formatting updates, mamba install util updates

--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: run ruff
       run: |
-        ipd ci tests ruff
+        ipd ci tests ruff ipd
 
     - name: run pytest digs
       run: |
