--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ['hatchling']
+build-backend = 'hatchling.build'
 
 [project]
-name = "ipd"
-version = "0.1"
+name = 'ipd'
+version = '0.1'
 dependencies = [
     'assertpy',
     'colorlog',
@@ -28,6 +28,7 @@ dependencies = [
     'pendulum',
     'pydantic',
     'pdot',
+    'pyright[nodejs]',
     'pytest',
     'pytest-sugar',
     'pytest-xdist',
@@ -56,31 +57,33 @@ crud = [
 ipd = 'ipd.__main__:main'
 
 [tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-m 'not ci'"
+minversion = '6.0'
+addopts = '-m "not ci"'
 testpaths = [
-    "ipd/tests",
+    'ipd/tests',
 ]
 markers = [
-    "slow: marks tests as slow to run",
-    "fast: tests that run in a second or two",
-    "ci: tests that should only run in ci",
+    'slow: marks tests as slow to run',
+    'fast: tests that run in a second or two',
+    'ci: tests that should only run in ci',
 ]
 
 [tool.pyright]
-include = ["rf_diffusion", "lib/rf2aa/rf2aa", "lib/rf2aa/lib/ipd/ipd"]
+include = ['rf_diffusion', 'lib/rf2aa/rf2aa', 'lib/rf2aa/lib/ipd/ipd']
 exclude = [
-    "**/__pycache__",
+    '**/*.log',
+    '/home/sheffler/rfdsym/ide/sublime_build.log',
+    '**/__pycache__',
 ]
 defineConstant = { DEBUG = true }
-typeCheckingMode = "standard"
+typeCheckingMode = 'standard'
 reportMissingImports = true
 reportMissingTypeStubs = false
-pythonPlatform = "Linux"
-requires-python = ">=3.11"
-pythonVersion = "3.12"
+pythonPlatform = 'Linux'
+requires-python = '>=3.11'
+pythonVersion = '3.12'
 executionEnvironments = [
-  { root = "/home/sheffler/sw/MambaForge/envs/pyright/bin/python", pythonVersion = "3.12", pythonPlatform = "Linux", extraPaths = [] },
+  { root = '/home/sheffler/sw/MambaForge/envs/pyright/bin/python', pythonVersion = '3.12', pythonPlatform = 'Linux', extraPaths = [] },
 ]
 
 [tool.ruff]
@@ -95,15 +98,15 @@ lint.ignore = [
    'F841',
 
 ]
-lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$"
+lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$'
 line-length = 111
-target-version = "py39"
-format.quote-style = "single"
-format.indent-style = "space"
+target-version = 'py39'
+format.quote-style = 'single'
+format.indent-style = 'space'
 format.docstring-code-format = true
 
 [tool.yapf]
-based_on_style = "pep8"
+based_on_style = 'pep8'
 indent_width = 4
 column_limit = 111
 blank_line_before_nested_class_or_def = false
