updates for ppp project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     'ipykernel',
     'ipywidgets',
     'ipdb',
+    'jinja2',
     'more_itertools',
     'numba',
     'numpy',
