Prettier Protein Project changes (#16)
* fix typo in pyproject.toml

* updates for ppp project

* updates to precommit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = '0.1'
 dependencies = [
     'assertpy',
     'colorlog',
+    'compact-json',
     'debugpy',
     # 'eliot-tree',
     'gitpython',
@@ -18,6 +19,7 @@ dependencies = [
     'ipykernel',
     'ipywidgets',
     'ipdb',
+    'jinja2',
     'more_itertools',
     'numba',
     'numpy',
@@ -37,7 +39,7 @@ dependencies = [
     'pytest-dotenv',
     'python-box',
     'requests',
-    'RestrectedPython',
+    'RestrictedPython',
     'ruff',
     'seaborn',
     'submitit',
