--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,17 +81,22 @@ arithmetic_precedence_indication = true
 [tool.pyright]
 include = ['ipd']
 exclude = [
-    '**/*.log',
-    'ipd/viz/*',
+    'ipd/crud/*',
+    'ipd/dev/state/*',
+    'ipd/fit/*',
     'ipd/homog/*',
-    'ipd/tests/*',
     'ipd/voxel/*',
     'ipd/samp/*',
-    'ipd/fit/*',
+    'ipd/sym/*',
+    'ipd/sym/old/*',
+    'ipd/sym/xtal/*',
+    'ipd/tests/*',
+    'ipd/viz/*',
     '*_viz.py',
-    'sym/xtal/*',
+    '**/*.log',
     '**/__pycache__',
 ]
+threads = 4
 defineConstant = { DEBUG = true }
 typeCheckingMode = 'standard'
 reportMissingImports = true
