added pyright checking tool

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,18 +81,18 @@ arithmetic_precedence_indication = true
 [tool.pyright]
 include = ['ipd']
 exclude = [
-    'ipd/crud/*',
-    'ipd/dev/state/*',
-    'ipd/fit/*',
-    'ipd/homog/*',
-    'ipd/voxel/*',
-    'ipd/samp/*',
-    'ipd/sym/*',
-    'ipd/sym/old/*',
-    'ipd/sym/xtal/*',
-    'ipd/tests/*',
-    'ipd/viz/*',
-    '*_viz.py',
+    # 'ipd/crud/*',
+    # 'ipd/dev/state/*',
+    # 'ipd/fit/*',
+    # 'ipd/homog/*',
+    # 'ipd/voxel/*',
+    # 'ipd/samp/*',
+    # 'ipd/sym/*',
+    # 'ipd/sym/old/*',
+    # 'ipd/sym/xtal/*',
+    # 'ipd/tests/*',
+    # 'ipd/viz/*',
+    # '*_viz.py',
     '**/*.log',
     '**/__pycache__',
 ]
