--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         ipd ci tests ruff ipd
 
+    - name: run pyright
+      run: |
+        pyright
+
     - name: run pytest digs
       run: |
         ipd ci tests pytest
