--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -28,8 +28,7 @@ jobs:
 
     - name: run pyright
       run: |
-        conda init
-        conda activate ci
+        export PYTHONPATH=/home/bench/.conda/envs/ci/lib/python3.12/site-packages
         /home/bench/.conda/envs/ci/bin/pyright -p pyproject.toml
 
     - name: run pytest digs
