--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -39,7 +39,8 @@ jobs:
     - name: Upload coverage reports to Codecov
       run: |
         curl -Os https://cli.codecov.io/latest/linux/codecov && chmod +x codecov
-        ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
+        ./codecov --verbose upload-process --fail-on-error -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
+        # ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
 
     - name: check test results
       run: |
