--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -15,7 +15,7 @@ jobs:
     - name: setup
       run: |
         ipd update
-        ipd ci update_library --libs ipd
+        ipd ci update_library ipd
 
     - name: run ruff
       run: |
