trigger ci on push to main

--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -1,5 +1,7 @@
 name: run pytest on digs with slurm
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 permissions:
