--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ defineConstant = { DEBUG = true }
 typeCheckingMode = 'standard'
 reportMissingImports = true
 reportMissingTypeStubs = false
+reportOverlappingOverload = false
 pythonPlatform = 'Linux'
 requires-python = '>=3.11'
 pythonVersion = '3.12'
