WIP syminfo_from_frames, work on Cx,Dx, TOI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     'plotly',
     'pendulum',
     'pydantic',
+    'pytantic_numpy',
     'pdot',
     'pyright[nodejs]',
     'pytest',
