many misc small utilities, Tolerances works with torch/xarray, sym_detect bug fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,8 @@ dependencies = [
     'hydra-core',
     'hypothesis[numpy]',
     'icecream',
-    'ipython',
-    'ipykernel',
-    'ipywidgets',
-    'ipdb',
     'jinja2',
+    'lark',
     'more_itertools',
     'numba',
     'numpy',
@@ -29,7 +26,7 @@ dependencies = [
     'plotly',
     'pendulum',
     'pydantic',
-    'pytantic_numpy',
+    'numpydantic',
     'pdot',
     'pyright[nodejs]',
     'pytest',
@@ -47,6 +44,7 @@ dependencies = [
     'tqdm',
     'typer',
     'validate-pyproject[all]',
+    'xarray',
     'yapf',
 ]
 [project.optional-dependencies]
