add ipd.dev.print_table, add post symdetect check for combined biounit/asu sym

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     'pytest-cov',
     'pytest-benchmark',
     'pytest-dotenv',
-    'python-box',
+    'rich',
     'requests',
     'RestrictedPython',
     'ruff',
