--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+[tool.hatch.metadata]
+allow-direct-references = true
 # [build-system]
 # requires = ["setuptools >= 61.0"]
 # build-backend = "setuptools.build_meta"
@@ -44,6 +46,7 @@ dependencies = [
     'yapf',
     "torch>=2.6.0",
     "pytest>=8.3.4",
+    "willutil_cpp @ git+https://github.com/willsheffler/willutil_cpp",
 ]
 [project.optional-dependencies]
 ci = [
