--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,29 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-cython"]
 build-backend = "hatchling.build"
+
+# [tool.hatch.build.targets.wheel.hooks.cython]
+# sources = ["src/my_package/**/*.pyx"]
+# extra_compile_args = ["-O3"]
+
+#[tool.hatch.build.targets.wheel]
+#only-include = ["ipd"]
+#
+#[tool.hatch.build.targets.wheel.hooks.cython]
+#dependenciees = ["hatch-cython"]
+#
 [tool.hatch.metadata]
 allow-direct-references = true
-# [build-system]
-# requires = ["setuptools >= 61.0"]
-# build-backend = "setuptools.build_meta"
-# [build-system]
-# requires = ["pdm-backend"]
-# build-backend = "pdm.backend"
+#
+#[build.targets.wheel.hooks.cython.options.files]
+#targets = ["ipd/cython/dynamic_float_array.pyx"]
+#
+# [tool.hatch.build.hooks.custom]
+# path = "build.py"
 
 [project]
 name = 'ipd'
-version = '0.1'
+version = '0.2'
 requires-python = '>3.9,<4' # for woodys old pipeline stuff
 dependencies = [
     'attrs',
@@ -20,6 +31,7 @@ dependencies = [
     'colorlog',
     'compact-json',
     'hydra-core',
+    'hypothesis',
     'httpx',
     'icecream',
     'lark',
@@ -33,6 +45,8 @@ dependencies = [
     # 'seaborn',
     'typer',
     "toolz>=1.0.0",
+    'pytest',
+    'pytest-xdist',
 ]
 [project.optional-dependencies]
 crud = [
@@ -77,7 +91,7 @@ dev = [
     'pytest-cov',
     'pytest-benchmark',
     'pytest-dotenv',
-    'pyright[nodejs]',
+    'basedpyright',
     'ruff',
     'validate-pyproject[all]',
     'yapf',
@@ -132,37 +146,37 @@ blank_line_before_nested_class_or_def = true
 blank_lines_around_top_level_definition = 1
 arithmetic_precedence_indication = true
 
-[tool.pyright]
-pythonVersion = "3.12"
-pythonPlatform = "Linux"
-venvPath = "/home/sheffler/sw/MambaForge/envs"
-venv = "rfdsym312"
-include = ['ipd']
-exclude = [
-    # 'ipd/crud/*',
-    # 'ipd/fit/*',
-    # 'ipd/homog/*',
-    # 'ipd/pdb/*',
-    # 'ipd/voxel/*',
-    # 'ipd/samp/*',
-    # 'ipd/sym/old/*',
-    # 'ipd/sym/xtal/*',
-    # 'ipd/tests/*',
-    # 'ipd/viz/*',
-    # '*_viz.py',
-    '**/*.log',
-    '**/__pycache__',
-]
-threads = 12
-defineConstant = { DEBUG = true }
-# typeCheckingMode = 'basic'
-typeCheckingMode = 'standard'
-reportMissingImports = false
-reportMissingTypeStubs = false
-
-executionEnvironments = [
-  { root = 'ipd' }
-]
+# [tool.pyright]
+# pythonVersion = "3.12"
+# pythonPlatform = "Linux"
+# venvPath = "/home/sheffler/sw/MambaForge/envs"
+# venv = "rfdsym312"
+# include = ['ipd']
+# exclude = [
+#     # 'ipd/crud/*',
+#     # 'ipd/fit/*',
+#     # 'ipd/homog/*',
+#     # 'ipd/pdb/*',
+#     # 'ipd/voxel/*',
+#     # 'ipd/samp/*',
+#     # 'ipd/sym/old/*',
+#     # 'ipd/sym/xtal/*',
+#     # 'ipd/tests/*',
+#     # 'ipd/viz/*',
+#     # '*_viz.py',
+#     '**/*.log',
+#     '**/__pycache__',
+# ]
+# threads = 12
+# defineConstant = { DEBUG = true }
+# # typeCheckingMode = 'basic'
+# typeCheckingMode = 'standard'
+# reportMissingImports = false
+# reportMissingTypeStubs = false
+#
+# executionEnvironments = [
+#   { root = 'ipd' }
+# ]
 
 [tool.ruff]
 lint.ignore = [
@@ -177,7 +191,7 @@ lint.ignore = [
 
 ]
 lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$'
-line-length = 123
+line-length = 113
 target-version = 'py39'
 format.quote-style = 'single'
 format.indent-style = 'space'
