minor test fixes, remove remove pyright from github actioins

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     'assertpy',
     'colorlog',
     'compact-json',
+    'gitpython',
     'hydra-core',
     'hypothesis',
     'httpx',
