--- a/.github/workflows/run_tests_digs.yml
+++ b/.github/workflows/run_tests_digs.yml
@@ -9,6 +9,7 @@ permissions:
 jobs:
   test:
     runs-on: [self-hosted, Linux, X64]
+    continue-on-error: true
     steps:
 
     - name: checkout
@@ -27,10 +28,10 @@ jobs:
       run: |
         validate-pyproject pyproject.toml
 
-    - name: run pyright
-      run: |
-        export PYTHONPATH=/home/bench/.conda/envs/ci/lib/python3.12/site-packages
-        /home/bench/.conda/envs/ci/bin/pyright -p pyproject.toml
+#    - name: run pyright
+#      run: |
+#        export PYTHONPATH=/home/bench/.conda/envs/ci/lib/python3.12/site-packages
+#        /home/bench/.conda/envs/ci/bin/pyright -p pyproject.toml
 
     - name: run pytest digs
       run: |
