switch to `hgeom` as bvh backend, improve examples, docstrings, formatters, and testing
- Replaced all uses of `willutil_cpp` with new `hgeom` library
- Updated `ipd.atom.body`, `ipd.atom.atom_utils`, `ipd.homog.hgeom`, and others to use `hgeom.SphereBVH_double`
- Improved doctests and usage examples throughout many modules
- Simplified `Body` and `SymBody` API: added `.centered`, `.hasclash`, `.contacts`, etc.
- Added `ipd/tools/ide_tool.py` for IDE-friendly test dispatching
- Replaced `httpx` with `requests` and `requests_cache` for pdbfetch/rcsb utils
- Added support for `local.toml` project config (e.g., keeping blank lines in formatters)
- Removed `willutil_cpp` from optional dependencies, replaced with `hgeom`
- Added extensive hgeom unit tests under `ipd/tests/homog/test_hgeom_library.py`
- Refactored test runner and added `datahub_crop_example.pickle.gz` example for cropping test
- Overhauled formatter module (delegated to `evn.formatter`)
- Cleaned up `maintest` system to support `tmpdir`, detect fixtures
- Updated `.gitignore` to ignore `*.sqlite` DBs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,11 @@ dependencies = [
     'assertpy',
     'colorlog',
     'compact-json',
+    'evn',
     'gitpython',
+    "hgeom",
     'hydra-core',
     'hypothesis',
-    'httpx',
     'icecream',
     'lark',
     # 'numba',
@@ -40,13 +41,15 @@ dependencies = [
     'opt_einsum',
     # 'pandas',
     'pydantic',
+    'requests',
+    'requests_cache',
     'rich',
     'RestrictedPython',
     # 'seaborn',
+    'tomli',
     'typer',
-    "toolz>=1.0.0",
+    "toolz",
     'pytest',
-    'pytest-xdist',
 ]
 [project.optional-dependencies]
 crud = [
@@ -65,7 +68,6 @@ ml = [
     'torch',
     'pandas',
     'biotite',
-    "willutil_cpp @ git+https://github.com/willsheffler/willutil_cpp"
 ]
 # docs = [
 #     'sphinx',
@@ -83,6 +85,7 @@ dev = [
     'debugpy',
     'hypothesis[numpy]',
     "pytest",
+    'pytest-xdist',
     'gitpython',
     'jinja2',
     'nox',
@@ -110,7 +113,6 @@ all = [
     'submitit',
     'torch',
     'uvicorn[standard]',
-    "willutil_cpp @ git+https://github.com/willsheffler/willutil_cpp",
 ]
 [project.scripts]
 ipd = 'ipd.__main__:main'
